fixed regional-state event imgs, current members hyperlink alignment

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -32,6 +32,8 @@
 
   // nav
   --navbar-height: 88px;
+  
+  background-color: var(--color-light-gray);
 }
 
 * {
