--- a/src/styles/pages/events/regional-state.module.scss
+++ b/src/styles/pages/events/regional-state.module.scss
@@ -6,6 +6,9 @@
   gap: 86px;
   background-color: var(--color-light-gray);
   padding: 81px 112px 126px 112px;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
 
   @include mixins.tablet {
     gap: 64px;
@@ -113,8 +116,8 @@
 
 .eventCardImg {
   width: 50%;
+  position: relative;
   display: flex;
-  justify-content: center;
 
   @include mixins.tablet {
     width: 100%;
@@ -126,6 +129,10 @@
   border-radius: 15px;
   object-fit: cover;
   object-position: center;
+
+  @include mixins.tablet {
+    position: relative !important;
+  }
 }
 
 .eventImgGallery {
@@ -223,6 +230,7 @@
 }
 
 .event2ImgContainer {
+  position: relative;
   display: flex;
   width: 50%;
 
@@ -236,6 +244,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 18px 0;
   gap: 40px;
 
   @include mixins.tablet {
